# photo-cherrypick-desktop

./: .gitignore  README.md  RELEASING.md  requirements.txt  ruff.toml
.github/workflows/: ci-rust.yml  ci.yml  release-macos.yml
desktop/: README.md  cull-server.spec
desktop/src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: main.rs
desktop_core/: __init__.py  cli.py  constants.py  export.py  feed.py  ingest.py  pipeline_runner.py  raw_preview.py  store.py  views.py
docs/: PHASE1-REPORT.md  SCORING-AUDIT-2026-06.md  SCORING-ITERATION-LOG.md  dev-dual-instance-runbook.md  packaging.md  real-analyze-testing.md  rust-toolchain.md  schema-migrations.md  updater-key-recovery.md
eval/: measure.py  reference_panel.json  reference_picks.json  rescore.py
frontend/: .env.example  Dockerfile  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/public/: splash.html
frontend/src/: App.tsx  api.test.ts  api.ts  constants.ts  i18n.test.ts  i18n.tsx  main.tsx  styles.css  test-setup.ts  useDecision.ts  useKeyboard.test.ts  useKeyboard.ts  useSessionData.ts  useUpdater.ts
frontend/src/components/: AxisBars.tsx  ConfirmModal.test.tsx  ConfirmModal.tsx  CountsHeader.tsx  ErrorBoundary.tsx  ErrorState.test.tsx  ErrorState.tsx  FeedView.tsx  GroupGrid.tsx  HelpGuide.tsx  LangToggle.tsx  Lightbox.tsx  PhotoCard.tsx  Progress.tsx  SessionInput.tsx  SessionView.tsx  StableLabel.tsx  UpdateFooter.tsx
frontend/src/lib/: exportWithCheck.ts  groupLabel.ts  routing.ts  (+2 more)
pipeline/: analyze.py  embed.py  faces.py  group.py  metrics.py  models.py  scene_group.py  score.py  select.py
server/: app.py  run.py
tests/: conftest.py  test_export.py  test_feed.py  test_grouping.py  test_ingest.py  test_pipeline_runner.py  test_raw_preview.py  test_scoring.py  test_server_e2e.py  test_store.py
