[package]
name = "photo-cherrypick-desktop"
version = "1.0.0"
edition = "2021"
description = "Local-first photo culling desktop app"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
