[package]
name = "photo-cherrypick-desktop"
version = "1.0.0"
edition = "2021"
description = "Local-first photo culling desktop app"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
# Required at the crate root: with the updater configured, tauri::generate_context!() expands to
# code that references serde_json (else E0433: cannot find `serde_json` in the crate root).
serde_json = "1"
